[Reimbursements / General] Fix `.b--....` classes on cards in dark mode. (#5568)
The dark mode SCSS file would override our custom border colours. Fixes
https://github.com/hackclub/hcb/issues/5551.

--- a/app/assets/stylesheets/_dark.scss
+++ b/app/assets/stylesheets/_dark.scss
@@ -165,6 +165,21 @@ html[data-dark='true'] {
     pre {
       background-color: $dark;
     }
+    &.b--warning {
+      border-color: rgba(map-get($palette, warning), 0.375);
+    }
+    
+    &.b--info {
+      border-color: rgba(map-get($palette, info), 0.375);
+    }
+    
+    &.b--success {
+      border-color: rgba(map-get($palette, success), 0.375);
+    }
+    
+    &.b--primary {
+      border-color: rgba(map-get($palette, primary), 0.375);
+    }
   }
 
   .black,
